--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <header>
-        <a class="logo" href="/">News Demo</a>
+        <a class="logo" href="/">goNews</a>
         <form action="/search" method="GET">
           <input
             autofocus
@@ -22,7 +22,7 @@
           />
         </form>
         <a
-          href="https://github.com/freshman-tech/news"
+          href="https://github.com/karankessy/goNews"
           class="button github-button"
           >View on GitHub</a
         >
